# thor

./: .gitignore  CMakeLists.txt  Makefile  config.xml  newclass.pl
data/: tracer.cl
src/: CMakeLists.txt  MessageSystem.cpp  MessageSystem.h  StreamAsString.h  TemplateMP.h  main.cpp
src/math/: Constants.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
src/resource/: ArgvParser.cpp  ArgvParser.h  Element.cpp  Element.h  File.cpp  File.h  Registry.cpp  Registry.h  XML.cpp  XML.h  XMLInterface.cpp  XMLInterface.h  XMLInterfaceMP.h  XMLInterfaceMacros.h  XMLInterfaceParse.h  XMLInterfaceSerialize.h
src/tracer/: CLConfig.cpp  CLConfig.h  Camera.cpp  Camera.h  Interface.cpp  Interface.h  Light.cpp  Light.h  OutputConfig.cpp  OutputConfig.h  Scene.cpp  Scene.h  SceneCache.cpp  SceneCache.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
